--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "git@kale.github.com:crustio/tonbags-gateway.git",
   "author": "KayleCoder <kalecoder@outlook.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "gts clean && tsc"
+  },
   "dependencies": {
     "axios": "^1.7.3",
     "dotenv": "^16.4.5",
